# DEWDROP

./: .env.example  .gitignore  CLAUDE.md  DEWDROP.code-workspace  README.md  pyproject.toml  requirements.txt
deploy/: dewdrop-actuals.service  dewdrop-actuals.timer  dewdrop-aggregate.service  dewdrop-aggregate.timer  dewdrop-api.service  dewdrop-backup.service  dewdrop-backup.timer  dewdrop-poll.service  dewdrop-poll.timer  dewdrop-score.service  dewdrop-score.timer  dewdrop-snapshot-ensemble.service  dewdrop-snapshot-ensemble.timer  dewdrop-station.service  dewdrop-station.timer  push.sh  setup.sh
dewdrop/: __init__.py  config.py  db.py  models.py  normalise.py
dewdrop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dewdrop/actuals/: __init__.py  asos.py  derive.py  ecowitt.py
dewdrop/api/: main.py
dewdrop/blend/: __init__.py  blender.py  microclimate.py
dewdrop/scoring/: __init__.py  score.py
dewdrop/sources/: __init__.py  base.py  nws.py  open_meteo.py  openweathermap.py  tomorrow_io.py  weatherbit.py  wunderground.py
dewdrop/station/: reader.py
dewdrop/web/: __init__.py
dewdrop/web/static/: app.js  index.html  style.css
docs/: _design_clean.txt  kc_weather_tracker_design.docx  kc_weather_tracker_design.md
scripts/: aggregate_station.py  backfill_precip.py  backup_db.py  ingest_actuals.py  init_db.py  poll_forecasts.py  poll_station.py  prune_errors.py  run_scoring.py  snapshot_ensemble.py
tests/: test_pipeline.py
